--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>popup</title>
+        <title>popup</title>
+
+        <link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-        
+        <button>click me</button>
+
+        <div class="popup-wrapper">
+            <div class="popup">
+                <div class="popup-close">x</div>
+                <!-- /.popup-close -->
+                <div class="popup-content">
+                    <h2>NINJA SALE!!</h2>
+                    <p>50% off all ninja clothing, dont miss out!!</p>
+                    <a href="#">view clothing</a>
+                </div>
+                <!-- /.popup-content -->
+            </div>
+            <!-- /.popup -->
+        </div>
+        <!-- /.popup-wrapper -->
+
+        <script src="popup.js"></script>
     </body>
 </html>
